applying security to nginx pod

--- a/my-app/nginx.yaml
+++ b/my-app/nginx.yaml
@@ -9,5 +9,8 @@ spec:
     - name: nginx
       image: nginx:alpine
       imagePullPolicy: IfNotPresent
+      securityContext:
+        runAsNonRoot: true
+        readOnlyRootFilesystem: true
   restartPolicy: Always
   
